<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Pokemon List Screen -->
    <string name="pokemons" translatable="false">Pokemons</string>
    <string name="items">Items</string>
    <string name="moves">Moves</string>
    <string name="types">Types</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="no_pokemon_found">No pokemon with name %1$s was found</string>

    <!-- Pokemon Details Screen -->
    <string name="stats">Stats</string>
    <string name="evolutions">Evolutions</string>
    <string name="unable_to_load_pokemon_details">Unable to fetch Pokemon details</string>
    <string name="weak_to">Weak to</string>
    <string name="resistant_to">Resistant to</string>
    <string name="immune_to">Immune to</string>

</resources>